<resources>
    <string name="app_name">NewsTime</string>

    <string name="settings_title">NewsTime Settings</string>
    <string name="settings_menu_item">Settings</string>

    <string name="no_news">No news found.</string>
    <string name="no_internet_connection">No Internet Connection</string>

    <string name="settings_section_label">Section</string>
    <string name="settings_section_key" translatable="false">section</string>
    <string name="settings_section_default" translatable="false">politics</string>

    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/order_by_newest_value</string>

    <string name="order_by_newest_label">Newest</string>
    <string name="order_by_newest_value">newest</string>
    <string name="order_by_oldest_label">Oldest</string>
    <string name="order_by_oldest_value">oldest</string>

    <string name="settings_page_size_label">News Stories</string>
    <string name="settings_page_size_key" translatable="false">page_size</string>
    <string name="settings_page_size_default" translatable="false">@string/page_size_10_label</string>

    <string name="page_size_10_label">10</string>
    <string name="page_size_10_value">10</string>
    <string name="page_size_20_label">20</string>
    <string name="page_size_20_value">20</string>
    <string name="page_size_30_label">30</string>
    <string name="page_size_30_value">30</string>

    <string name="settings_date_label">From Date</string>
    <string name="settings_date_key" translatable="false">date</string>
    <string name="settings_date_default" translatable="false">2017-12-30</string>
</resources>
