<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <EditTextPreference
        android:defaultValue="@string/settings_section_default"
        android:inputType="text"
        android:key="@string/settings_section_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_section_label" />

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/order_by_label"
        android:entryValues="@array/order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <ListPreference
        android:defaultValue="@string/settings_page_size_default"
        android:entries="@array/page_size_label"
        android:entryValues="@array/page_size_values"
        android:key="@string/settings_page_size_key"
        android:title="@string/settings_page_size_label" />

    <Preference
        android:defaultValue="@string/settings_date_default"
        android:key="@string/settings_date_key"
        android:title="@string/settings_date_label" />

</PreferenceScreen>